eks/helm/weave-scope/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: dashboard-ingress
  namespace: mgmt
spec:
  tls: 
  - hosts:
    - dashboard.goevex.com
    secretName: dashboard-cert 
  rules:
    - host: dashboard.goevex.com
      http:
        paths:
          - backend:
              serviceName: weave-scope-weave-scope
              servicePort: 80
            path: /
